# sarlacc

./: .coveragerc  .gitignore  .gitreview  .testr.conf  MANIFEST.in  README.rst  openstack-common.conf  pylintrc  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: agi.rst  conf.py  index.rst
doc/source/modules/: modules.rst  sarlacc.asterisk.agi.rst  sarlacc.asterisk.ari.rst  sarlacc.asterisk.rst  sarlacc.cmd.rst  sarlacc.common.rst  sarlacc.rst  sarlacc.tests.asterisk.agi.rst  sarlacc.tests.asterisk.rst  sarlacc.tests.rst  sarlacc.tests.utils.rst
sarlacc/: test.py  utils.py  version.py
sarlacc/asterisk/: agi.py  client.py
sarlacc/asterisk/agi/: base.py
sarlacc/asterisk/ari/: asterisk.py  client.py  shell.py
sarlacc/cmd/: shell.py
sarlacc/common/: exception.py  http.py  utils.py
sarlacc/openstack/common/: gettextutils.py  jsonutils.py  log.py  strutils.py
sarlacc/tests/asterisk/: test_agi.py
sarlacc/tests/asterisk/agi/: test.py  test_answer.py  test_asyncagi_break.py  test_channel_status.py  test_control_stream_file.py  test_database_del.py  test_database_deltree.py  test_database_get.py  test_database_put.py  test_execute.py  test_get_data.py  test_get_full_variable.py  test_get_option.py  test_get_variable.py  test_hangup.py  test_noop.py  test_receive_char.py  test_receive_text.py  test_record_file.py  test_say_alpha.py  test_say_date.py  test_say_datetime.py  test_say_digits.py  test_say_number.py  test_say_phonetic.py  (+21 more)
sarlacc/tests/utils/: test_agi_parse_result.py
tools/: install_venv.py  test-requires
