[metadata]
name = sarlacc
version = 0.0.1
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Asterisk
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
warnerrors = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sarlacc

[entry_points]
console_scripts =
    sarlacc = sarlacc.cmd.shell:main
sarlacc.shell =
    ari build info = sarlacc.asterisk.ari.shell:ShowBuildInfo
    ari config info = sarlacc.asterisk.ari.shell:ShowConfigInfo
    ari status info = sarlacc.asterisk.ari.shell:ShowStatusInfo
    ari system info = sarlacc.asterisk.ari.shell:ShowSystemInfo

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity=2
detailed-errors=1
